Added item photo option 2.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,8 @@
     <string name="books">Books</string>
     <string name="baby_supplies">Baby Supplies</string>
     <string name="computers">Computers</string>
+    <string name="other">Other</string>
+
 
 
     <!-- conditions-->
