Added firestore support + realtime updating. Moved to bottom tabs view.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,8 @@
     <string name="baby_supplies">Baby Supplies</string>
     <string name="computers">Computers</string>
     <string name="other">Other</string>
+    <string name="free">Free</string>
+
 
 
 
