--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
     <string name="app_name">DoGood</string>
     <string name="Dogood">Do Good</string>
     <string name="home">Home</string>
-    <string name="object_to_give">Object to give</string>
-    <string name="object_to_ask">Object to ask</string>
+    <string name="object_to_give">Given items</string>
+    <string name="object_to_ask">Needed items</string>
     <string name="profile">Profile</string>
     <string name="logout">Logout</string>
     <string name="communicate">Communicate</string>
@@ -61,5 +61,11 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
-
+    <string-array name="query_suggestions">
+        <item>Android</item>
+        <item>iOS</item>
+        <item>SCALA</item>
+        <item>Ruby</item>
+        <item>JavaScript</item>
+    </string-array>
 </resources>
