--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,6 +60,13 @@
     <string name="user_mail">User mail</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="welcome_to_do_good">Welcome To Do good !</string>
+    <string name="do_good_and_fell_good">Do good and fell good</string>
+    <string name="mail">Mail</string>
+    <string name="password">Password</string>
+    <string name="login">Login</string>
+    <string name="forgot_password">Forgot password ?</string>
+    <string name="sign_in_with">Sign in with :</string>
 
     <string-array name="query_suggestions">
         <item>Android</item>
