Added remove and edit infrastructure

--- a/app/src/main/res/values-iw-rIL/strings.xml
+++ b/app/src/main/res/values-iw-rIL/strings.xml
@@ -77,4 +77,7 @@
     <string name="post_date">תאריך פרסום: </string>
     <string name="price">מחיר: </string>
     <string name="description">תיאור: </string>
+
+    <string name="remove_item">מחיקת פריט</string>
+    <string name="edit_item">עריכת פריט</string>
 </resources>
