Added contact window2

--- a/app/src/main/res/values-iw-rIL/strings.xml
+++ b/app/src/main/res/values-iw-rIL/strings.xml
@@ -85,4 +85,9 @@
     <string name="no">לא</string>
     <string name="are_you_sure">בטוח למחוק את </string>
 
+    <string name="contact_us">צרו קשר:</string>
+    <string name="regarding_item">בנוגע לפריט:</string>
+
+
+
 </resources>
