--- a/app/src/main/res/values-iw-rIL/strings.xml
+++ b/app/src/main/res/values-iw-rIL/strings.xml
@@ -92,5 +92,7 @@
     <string name="email2">אימייל: </string>
     <string name="phone2">טלפון: </string>
     <string name="city2">עיר: </string>
+    <string name="contact_giver">"צרו קשר עם הנותן "</string>
+    <string name="contact_asker">"צור קשר עם השואל "</string>
 
 </resources>
