--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -137,4 +137,13 @@
     <string name="permission_denied_explication_camera">\"Camera permission is required to take a photo of your item.\n\" + \"Please allow camera permissions in app settings.\"</string>
 
 
+    <string name="hello">Hello</string>
+    <string name="latest_gift">Latest Gift</string>
+    <string name="latest_request">Latest Request</string>
+
+
+    <string name="test_app_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
+    <string name="app_id" translatable="false">ca-app-pub-7740925847001376~9529536357</string>
+    <string name="bottom_banner_id" translatable="false">ca-app-pub-7740925847001376/7777470981</string>
+
 </resources>
