change to Text input material

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -161,6 +161,7 @@
 
     <string name="items_im_giving">Items I am giving</string>
     <string name="items_i_need">Items I need</string>
+    <string name="hey_to_mail">Hey , I\'m interested by</string>
 
 
 </resources>
