chage to viewPager = view.findViewById(R.id.viewPager);

--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -3,15 +3,15 @@
     <string name="app_name">DoGood</string>
     <string name="Dogood">Do Good</string>
     <string name="home">Accueil</string>
-    <string name="object_to_give">"Articles a donnés "</string>
-    <string name="object_to_ask">"Articles nécessaires "</string>
+    <string name="object_to_give">"Articles a donner"</string>
+    <string name="object_to_ask">"Articles nécessaires"</string>
     <string name="profile">Profil</string>
     <string name="logout">Déconnecter</string>
     <string name="share">Partager</string>
     <string name="rate">Noter</string>
     <string name="menu">Menu</string>
-    <string name="item_name">"Nom de l'article "</string>
-    <string name="item_description">"Description de l'article "</string>
+    <string name="item_name">"Nom de l'article"</string>
+    <string name="item_description">"Description de l'article"</string>
     <string name="item_price">Prix de l\'article</string>
     <string name="free_item">Gratuit</string>
     <string name="submit">Envoyée</string>
